--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for AutopsyTable
 
+1.0.6.0 - Should now properly give meat/leather again. For some reason I missed that in the 1.1 update
+
+
 1.0.5.0 - Mod updated for 1.3 and passed autotests
 
 
