--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for AutopsyTable
 
+1.3.6 - Fixed minimized version, cleaned up the graphics a bit
+
+
 1.3.5 - Fixed the recent cosmic horrors patch
 
 
