--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for AutopsyTable
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.3.6 - Fixed minimized version, cleaned up the graphics a bit
 
 
