--- a/Languages/English/DefInjected/ThingDef/Building_AutopsyTable.xml
+++ b/Languages/English/DefInjected/ThingDef/Building_AutopsyTable.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <TableAutopsy.label>autopsy table</TableAutopsy.label>
   <TableAutopsy.description>Table for cutting corpses.</TableAutopsy.description>
