--- a/Languages/English/DefInjected/RecipeDef/Recipes_Autopsy.xml
+++ b/Languages/English/DefInjected/RecipeDef/Recipes_Autopsy.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <AutopsyHumanoid.label>perform autopsy</AutopsyHumanoid.label>
   <AutopsyHumanoid.description>Autopsy a humanoid corpse to obtain various stuff.</AutopsyHumanoid.description>
