--- a/Languages/English/DefInjected/WorkGiverDef/WorkGivers.xml
+++ b/Languages/English/DefInjected/WorkGiverDef/WorkGivers.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <DoPerformAutopsy.label>perform autopsy</DoPerformAutopsy.label>
   <DoPerformAutopsy.verb>perform autopsy</DoPerformAutopsy.verb>
