--- a/Languages/Russian/DefInjected/RecipeDef/Recipes_Autopsy.xml
+++ b/Languages/Russian/DefInjected/RecipeDef/Recipes_Autopsy.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <AutopsyHumanoid.label>произвести вскрытие трупа</AutopsyHumanoid.label>
   <AutopsyHumanoid.description>Вскрытие трупа человека для извлечения органов.</AutopsyHumanoid.description>
