--- a/Languages/Russian/DefInjected/ThingDef/Building_AutopsyTable.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Building_AutopsyTable.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <TableAutopsy.label>прозекторский стол</TableAutopsy.label>
   <TableAutopsy.description>Стол для вскрытия трупов.</TableAutopsy.description>
