--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for AutopsyTable
 
+1.6.0 - Mod updated for 1.6 and passed autotests
+
+
 1.5.2 - Fixed compatibility with anomaly entities
 
 
